--- a/.github/workflows/deploy-wiki.yaml
+++ b/.github/workflows/deploy-wiki.yaml
@@ -29,6 +29,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           
           git init
+          git remote add origin https://github.com/dorianim/wiki-deploy.wiki.git
           git add --all -f
           git commit -am "Update wiki"
-          git push
+          git push -f
