--- a/.github/workflows/deploy-wiki.yaml
+++ b/.github/workflows/deploy-wiki.yaml
@@ -6,6 +6,9 @@ on:
     paths: [/wiki]
   workflow_dispatch:
     
+permissions:
+  contents: write
+    
 jobs:
   deploy-wiki:
     runs-on: ubuntu-latest
@@ -29,7 +32,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           
           git init
-          git remote add origin https://github.com/dorianim/wiki-deploy.wiki.git
+          git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/dorianim/wiki-deploy.wiki.git
 
           git add --all -f
           git commit -am "Update wiki"
