--- a/.github/workflows/deploy-wiki.yaml
+++ b/.github/workflows/deploy-wiki.yaml
@@ -23,16 +23,26 @@ jobs:
       - name: Copy wiki
         run: |
           cp -r repo/wiki wiki
-          
-      - name: Push wiki
+        
+      # The public key for this key is a deploy key in the server repo
+      - name: Setup SSH Key
         run: |
+          echo "SSH_AUTH_SOCK=/tmp/ssh_agent.sock" >> $GITHUB_ENV
+          export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" 
+          echo "GIT_SSH_COMMAND=$GIT_SSH_COMMAND" >> $GITHUB_ENV
+          
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add - <<< "${{ secrets.REPO_SSH_KEY }}"
+        
+      - name: Push wiki
+        run: |  
           cd wiki
           git config --global init.defaultBranch main
           git config --global user.name 'Wiki Pusher'
           git config --global user.email 'actions@github.com'
           
           git init
-          git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/dorianim/wiki-deploy.wiki.git
+          git remote add origin git@github.com:dorianim/wiki-deploy.wiki.git
 
           git add --all -f
           git commit -am "Update wiki"
