--- a/.github/workflows/deploy-wiki.yaml
+++ b/.github/workflows/deploy-wiki.yaml
@@ -40,13 +40,13 @@ jobs:
       - name: Push wiki
         run: |  
           cd wiki
-          git config --global init.defaultBranch main
+          git config --global init.defaultBranch master
           git config --global user.name 'Wiki Pusher'
           git config --global user.email 'actions@github.com'
           
           git init
-          git remote add origin git@github.com:dorianim/wiki-deploy.wiki.git
+          git remote add origin git@github.com:${{ env.GITHUB_REPOSITORY }}.wiki.git
 
           git add --all -f
           git commit -am "Update wiki"
-          git push --set-upstream origin main -f
+          git push --set-upstream origin master -f
