--- a/.github/workflows/deploy-wiki.yaml
+++ b/.github/workflows/deploy-wiki.yaml
@@ -45,7 +45,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           
           git init
-          git remote add origin git@github.com:${{ env.GITHUB_REPOSITORY }}.wiki.git
+          git remote add origin git@github.com:dorianim/wiki-deploy.wiki.git
 
           git add --all -f
           git commit -am "Update wiki"
